[gd_scene load_steps=4 format=3 uid="uid://bofesf34vuoci"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_hh55r"]
[ext_resource type="Script" path="res://Scenes/SavedRollPage/Scripts/saved_roll.gd" id="2_bioj8"]
[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://Scenes/Common/Labels/settings_managed_label.tscn" id="7_r0sr2"]

[node name="SavedRoll" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_hh55r")
script = ExtResource("2_bioj8")

[node name="NoSavedRollLabel" parent="." instance=ExtResource("7_r0sr2")]
layout_mode = 1
text = "No Saved Rolls
"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_hh55r")
horizontal_scroll_mode = 0
scroll_deadzone = 5

[node name="SavedRollContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme = ExtResource("1_hh55r")
